# ecxp

./: .gitignore  CMakeLists.txt  installer.iss  readme.md  todo.md
examples/: class.ecx  config.ecc  game.ecx  hey.ecx  optimizer_test.ecx  raylib.ecx  speed.ecx
include/: ecxp.hpp
include/executor/: executor.hpp
include/extra/: ast.hpp  fnvalues.hpp  values.hpp
include/lexer/: lexer.hpp
include/optimizer/: optimizer.hpp
include/parser/: parser.hpp
include/std/console/: asink.hpp  console.hpp
include/std/ecx/: ecliptix.hpp
include/std/file/: file.hpp
include/std/graphics/: graphics.hpp
include/std/math/: math.hpp
include/utilities/: env.hpp  utils.hpp
src/: ast.hpp  config.hpp  fnvalues.hpp  main.cpp
src/executor/: executor.cpp  executor.hpp
src/executor/expressions/: array.cpp  assignment.cpp  binary.cpp  call.cpp  dsn.cpp  equality.cpp  ident.cpp  member.cpp  number.cpp  object.cpp  program.cpp  string.cpp
src/executor/statements/: function.cpp  if.cpp  variable.cpp  when.cpp  while.cpp
src/lexer/: lexer.cpp  lexer.hpp  stringify.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp  parser.hpp  parserUtils.cpp
src/parser/expressions/: add.cpp  args.cpp  array.cpp  assign.cpp  call.cpp  dsn.cpp  expr.cpp  member.cpp  memberCall.cpp  mul.cpp  object.cpp  primary.cpp
src/parser/statements/: fn.cpp  if.cpp  stmt.cpp  vars-fn.cpp  when.cpp  while.cpp
src/std/: common.cpp  common.hpp
src/std/console/: asink.hpp  ask.cpp  console.hpp  error.cpp  out.cpp  outraw.cpp
src/std/ecx/: ecliptix.hpp  exit.cpp  wait.cpp
src/std/file/: file.hpp  read.cpp  write.cpp
src/std/graphics/: close.cpp  graphics.hpp  integrity.cpp  log.cpp  loop.cpp  rect.cpp  rectround.cpp  running.cpp  showfps.cpp  triangle.cpp
src/std/math/: abs.cpp  cos.cpp  log.cpp  math.hpp  max.cpp  min.cpp  pow.cpp  round.cpp  sin.cpp  sqrt.cpp
src/utilities/: config.cpp  env.hpp  toml.hpp  utils.cpp  values.cpp
